fixes horizontal scroll issue

--- a/client/src/components/Auth/Login.css
+++ b/client/src/components/Auth/Login.css
@@ -12,7 +12,7 @@ h4 {
 
 .repo_name {
 	text-align: right;
-	font-size: 1em;
+	font-size: .8em;
 }
 
 .repo_detail {
@@ -116,7 +116,7 @@ ul li {
 }
 
 .info_container {
-	padding: 3%;
+	padding: 0 3%;
 	float: right;
 	width: 50%;
 }
@@ -130,8 +130,8 @@ ul li div p {
 ul li img {
 	float: left;
 	transform: scale(1);
-	width: 20%;
-	min-width: 100px;
+	width: 15%;
+	min-width: 75px;
 	padding: 3%;
 	border-radius: 15%;
 	border: 1px solid transparent;
