--- a/client/src/components/Repository_Index/RepositoryIndex.css
+++ b/client/src/components/Repository_Index/RepositoryIndex.css
@@ -1,11 +1,24 @@
+html{
+	-webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+}
+
 body {
+	width: 100%;
+	margin: 0;
 	padding: 0;
 	font-family: 'Work Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 }
 
 .page_container {
 	min-width: 224px;
-	width: 80%;
+	width: 100%;
 	margin: 50px auto;
 }
 
